--- a/TiltCodeManager/app/src/main/res/layout/item_coupon_row.xml
+++ b/TiltCodeManager/app/src/main/res/layout/item_coupon_row.xml
@@ -3,53 +3,34 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:id="@+id/layout_coupon_detail"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="40dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
 
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="horizontal"
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal">
+            android:layout_height="150dp"
+            android:id="@+id/img_coupon_row"
+            android:scaleType="centerCrop"
+            android:background="#aeaeae"/>
 
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Settings"
-                android:textColor="#efefef"
-                android:textSize="25dp"
-                android:id="@+id/tv_couponlist_row" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="10dp"
-                android:text=">"
-                android:textColor="#efefef"
-                android:textSize="25dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#efefef"
-            android:id="@+id/layout_setting_line"
-            android:layout_gravity="center_horizontal">
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:background="#000000"
+            android:textColor="#efefef"
+            android:textSize="20dp"
+            android:text="RoadCycle"
+            android:id="@+id/tv_coupon_row" />
 
-        </LinearLayout>
     </LinearLayout>
-
 
 </LinearLayout>
