--- a/TiltCodeManager/app/src/main/res/layout/fragment_couponlist.xml
+++ b/TiltCodeManager/app/src/main/res/layout/fragment_couponlist.xml
@@ -31,7 +31,7 @@
                 android:layout_height="match_parent" />
 
             <FrameLayout
-                android:background="#000000"
+                android:background="@android:color/transparent"
                 android:id="@+id/details_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
