--- a/TiltCodeManager/app/src/main/res/layout/activity_tiltselect.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_tiltselect.xml
@@ -14,6 +14,8 @@
 
 
             <LinearLayout
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="60dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
