--- a/TiltCodeManager/app/src/main/res/layout/fragment_edit.xml
+++ b/TiltCodeManager/app/src/main/res/layout/fragment_edit.xml
@@ -11,8 +11,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal">
 
-        <include layout="@layout/toolbar"/>
-
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -43,7 +41,7 @@
                             android:layout_width="wrap_content"
                             android:textSize="20dp"
                             android:layout_height="wrap_content"
-                            android:text="등록"
+                            android:text="수정"
                             android:textColor="#b3ffff"
                             />
 
@@ -68,7 +66,7 @@
                         android:textColor="#b3ffff"
                         />
 
-                    <Spinner
+                    <com.tiltcode.tiltcodemanager.View.NDSpinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/spinner_register_couponType"
@@ -84,9 +82,10 @@
                         android:textColor="#b3ffff"
                         />
 
-                    <Spinner
+                    <com.tiltcode.tiltcodemanager.View.NDSpinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="#ffffb3"
                         android:entries="@array/couponPickType"
                         android:id="@+id/spinner_register_couponPickType"
                         android:layout_gravity="center_horizontal" />
@@ -95,6 +94,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_width="wrap_content"
                         android:textSize="18dp"
+                        android:textColor="#ffffb3"
                         android:visibility="gone"
                         android:layout_height="wrap_content"
                         android:id="@+id/tv_register_gps_locale"
@@ -106,8 +106,8 @@
                         android:textSize="18dp"
                         android:layout_height="wrap_content"
                         android:text="파일선택"
-                        android:textColor="#b3ffff" />
-
+                        android:textColor="#b3ffff"
+                        />
                     <TextView
                         android:layout_marginTop="10dp"
                         android:layout_width="wrap_content"
@@ -143,7 +143,6 @@
                         android:maxHeight="150dp"
                         android:maxWidth="150dp"
                         android:id="@+id/imv_register_image" />
-
                     <TextView
                         android:layout_marginTop="10dp"
                         android:layout_width="wrap_content"
@@ -206,7 +205,7 @@
                         android:layout_marginTop="50dp"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:text="등록"
+                        android:text="수정"
                         android:textColor="#ababab"
                         android:background="#000000"
                         android:layout_gravity="center_horizontal"
