--- a/tiltcode/app/src/main/res/layout/activity_main.xml
+++ b/tiltcode/app/src/main/res/layout/activity_main.xml
@@ -12,108 +12,110 @@
         android:layout_height="match_parent">
 
 
-        <LinearLayout
+        <include layout="@layout/toolbar"/>
+
+        <FrameLayout
             android:orientation="vertical"
             android:id="@+id/content_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <include layout="@layout/toolbar"/>
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <LinearLayout
-                    android:clickable="true"
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="40dp">
-
-                    <LinearLayout
-                        android:layout_marginBottom="1px"
-                        android:layout_width="match_parent"
-                        android:layout_weight="3"
-                        android:layout_marginLeft="40dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_height="0dp"
-                        android:baselineAligned="false">
-
-                        <LinearLayout
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:gravity="center|bottom"
-                            android:layout_height="match_parent">
-
-                            <ImageView
-                                android:src="@drawable/ic_coupon"
-                                android:layout_width="20dp"
-                                android:layout_height="16dp" />
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:gravity="center|bottom"
-                            android:layout_height="match_parent">
-
-                            <ImageView
-                                android:src="@drawable/ic_tilt"
-                                android:layout_width="14dp"
-                                android:layout_height="16dp"/>
-                        </LinearLayout>
-                        <LinearLayout
-                            android:gravity="center|bottom"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                            <ImageView
-                                android:src="@drawable/ic_setting"
-                                android:layout_width="16dp"
-                                android:layout_height="16dp"/>
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_marginLeft="40dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_width="wrap_content"
-                        android:background="@drawable/naivigation"
-                        android:layout_height="3px">
-
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_marginLeft="40dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_width="match_parent"
-                        android:weightSum="3"
-                        android:layout_height="wrap_content" >
-
-                        <View
-                            android:id="@+id/layout_main_tab"
-                            android:background="@drawable/navigation_block"
-                            android:layout_weight="1"
-                            android:layout_width="0px"
-                            android:layout_height="7px" >
-
-
-                        </View>
-
-                    </LinearLayout>
-
-                </LinearLayout>
 
                 <com.tiltcode.tiltcode.View.DisableViewPager
                     android:id="@+id/pager_mainview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
-            </FrameLayout>
+            <LinearLayout
+                android:id="@+id/layout_main_tabview"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="40dp">
+
+                <LinearLayout
+                    android:layout_marginBottom="1px"
+                    android:layout_width="match_parent"
+                    android:layout_weight="3"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_height="0dp"
+                    android:baselineAligned="false">
+
+                    <LinearLayout
+                        android:id="@+id/tab_main_list"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:gravity="center|bottom"
+                        android:layout_height="match_parent"
+                        android:onClick="onTabClicked">
+
+                        <ImageView
+                            android:src="@drawable/ic_coupon"
+                            android:layout_width="20dp"
+                            android:layout_height="16dp" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/tab_main_tilt"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:gravity="center|bottom"
+                        android:layout_height="match_parent"
+                        android:onClick="onTabClicked">
+
+                        <ImageView
+                            android:src="@drawable/ic_tilt"
+                            android:layout_width="14dp"
+                            android:layout_height="16dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/tab_main_setting"
+                        android:gravity="center|bottom"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:onClick="onTabClicked">
+
+                        <ImageView
+                            android:src="@drawable/ic_setting"
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"/>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_width="wrap_content"
+                    android:background="@drawable/naivigation"
+                    android:layout_height="3px">
+
+                </LinearLayout>
 
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_width="match_parent"
+                    android:weightSum="3"
+                    android:layout_height="wrap_content" >
+
+                    <View
+                        android:id="@+id/layout_main_tab"
+                        android:background="@drawable/navigation_block"
+                        android:layout_weight="1"
+                        android:layout_width="0px"
+                        android:layout_height="7px" >
+
+
+                    </View>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </FrameLayout>
 
     </LinearLayout>
 
