--- a/tiltcode/app/src/main/res/layout/fragment_couponlist.xml
+++ b/tiltcode/app/src/main/res/layout/fragment_couponlist.xml
@@ -5,7 +5,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <com.handmark.pulltorefresh.library.PullToRefreshListView
             android:layout_marginTop="40dp"
