download service fixed

--- a/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
+++ b/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
@@ -80,10 +80,19 @@
                     android:id="@+id/tv_coupon_detail_desc" />
 
 
+                <TextView
+                    android:layout_marginTop="30dp"
+                    android:layout_width="wrap_content"
+                    android:textColor="#ffffff"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:text=""
+                    android:id="@+id/tv_coupon_detail_file" />
                 <Button
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
