edit icon / add birthday dialog

--- a/TiltCodeManager/app/src/main/res/layout/activity_register.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_register.xml
@@ -73,6 +73,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/spinner_register_couponType"
                         android:entries="@array/couponType"
+                        android:background="@drawable/text"
                         android:layout_gravity="center_horizontal" />
 
                     <TextView
@@ -87,6 +88,7 @@
                     <com.tiltcode.tiltcodemanager.View.NDSpinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/text"
                         android:entries="@array/couponPickType"
                         android:id="@+id/spinner_register_couponPickType"
                         android:layout_gravity="center_horizontal" />
