--- a/tiltcode/app/src/main/res/layout/fragment_tiltcode.xml
+++ b/tiltcode/app/src/main/res/layout/fragment_tiltcode.xml
@@ -16,12 +16,21 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:id="@+id/tiltview_tiltcodefragment"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+            <!--
             <com.tiltcode.tiltcode.View.TiltCodeView
                 android:id="@+id/tiltview_tiltcodefragment"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent" />-->
 
         </LinearLayout>
     </LinearLayout>
