--- a/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
+++ b/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
@@ -97,10 +97,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:text="쿠폰 다운로드"
-                    android:textColor="#ababab"
-                    android:background="#000000"
+                    android:textColor="#000000"
+                    android:background="@drawable/text"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/btn_couponitem_proc" />
+
+                <ImageButton
+                    android:layout_gravity="right"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="5dp"
+                    android:scaleType="center"
+                    android:layout_marginBottom="30dp"
+                    android:layout_width="71dp"
+                    android:layout_height="28dp"
+                    android:textColor="#ababab"
+                    android:background="@drawable/btn_delete"
+                    android:id="@+id/btn_couponitem_delete" />
             </LinearLayout>
 
         </LinearLayout>
