tilt register arc add

--- a/TiltCodeManager/app/src/main/res/layout/activity_register.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_register.xml
@@ -203,6 +203,10 @@
                         android:background="#b3ffff"
                         android:id="@+id/btn_register_tilt" />
 
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/img_coupon_detail_tilt" />
 
                     <Button
                         android:layout_marginBottom="50dp"
