--- a/TiltCodeManager/app/src/main/res/layout/fragment_coupondetail.xml
+++ b/TiltCodeManager/app/src/main/res/layout/fragment_coupondetail.xml
@@ -11,51 +11,73 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal">
 
-        <TextView
+        <ScrollView
             android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text=""
             android:id="@+id/tv_coupondetail_title" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"></LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="다운로드수 : 300건"
             android:id="@+id/tv_coupondetail_download" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="수익금 : 100원"
             android:id="@+id/tv_coupondetail_earn" />
 
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:textSize="18dp"
+                android:layout_height="wrap_content"
+                android:text="성별 다운로드수"
+                android:textColor="#b3ffff"
+                />
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/chart_coupondetail_sex"
                 android:layout_width="match_parent"
                 android:layout_height="150dp" />
 
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:textSize="18dp"
+                android:layout_height="wrap_content"
+                android:text="나이별 다운로드수"
+                android:textColor="#b3ffff"
+                />
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/chart_coupondetail_age"
                 android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="150dp" />
 
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:textSize="18dp"
+                android:layout_height="wrap_content"
+                android:text="기기별 다운로드수"
+                android:textColor="#b3ffff"
+                />
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/chart_coupondetail_device"
                 android:layout_marginTop="50dp"
