--- a/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
+++ b/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
@@ -26,13 +26,29 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right">
 
-                <ImageView
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="350dp"
-                    android:id="@+id/img_coupon_detail"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/test"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="350dp"
+                        android:id="@+id/img_coupon_detail"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/test"
+                        android:layout_gravity="center_horizontal" />
+                    <ImageButton
+                        android:layout_gravity="right|bottom"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="5dp"
+                        android:scaleType="center"
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="71dp"
+                        android:layout_height="28dp"
+                        android:textColor="#ababab"
+                        android:background="@drawable/btn_delete"
+                        android:id="@+id/btn_couponitem_delete" />
+                </FrameLayout>
 
             </LinearLayout>
 
@@ -102,17 +118,6 @@
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/btn_couponitem_proc" />
 
-                <ImageButton
-                    android:layout_gravity="right"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="5dp"
-                    android:scaleType="center"
-                    android:layout_marginBottom="30dp"
-                    android:layout_width="71dp"
-                    android:layout_height="28dp"
-                    android:textColor="#ababab"
-                    android:background="@drawable/btn_delete"
-                    android:id="@+id/btn_couponitem_delete" />
             </LinearLayout>
 
         </LinearLayout>
