--- a/TiltCodeManager/app/src/main/res/layout/fragment_signup.xml
+++ b/TiltCodeManager/app/src/main/res/layout/fragment_signup.xml
@@ -159,6 +159,7 @@
                         android:hint="생년월일"
                         android:layout_width="match_parent"
                         android:padding="5dp"
+                        android:focusable="false"
                         android:editable="false"
                         android:inputType="date"
                         android:background="#b3ffff"
