--- a/TiltCodeManager/app/src/main/res/layout/activity_register.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_register.xml
@@ -120,14 +120,21 @@
                         android:textColor="#ffffff"
                         android:id="@+id/tv_register_file_uri" />
 
-                    <ImageButton
-                        android:scaleType="centerInside"
-                        android:src="@drawable/ic_file"
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxHeight="150dp"
-                        android:maxWidth="150dp"
-                        android:id="@+id/imv_register_file" />
+                        android:orientation="horizontal"
+                        android:layout_height="match_parent">
+
+                        <ImageButton
+                            android:scaleType="centerInside"
+                            android:src="@drawable/ic_file"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxHeight="150dp"
+                            android:maxWidth="150dp"
+                            android:id="@+id/imv_register_file" />
+                    </LinearLayout>
+
 
                     <TextView
                         android:layout_marginTop="10dp"
