--- a/tiltcode/app/src/main/res/layout/activity_login.xml
+++ b/tiltcode/app/src/main/res/layout/activity_login.xml
@@ -10,111 +10,128 @@
         android:background="@drawable/bg_main"
         android:layout_gravity="center_horizontal">
 
-        <FrameLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_weight="1"
                 android:layout_height="match_parent">
 
-                <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/logo"/>
-
-
-                <TextView
-                    android:textColor="#dfdfdf"
-                    android:textSize="17dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Endless Possibilities with One Tilt"
-                    android:layout_gravity="center_horizontal" />
-
-                <LinearLayout
-                    android:layout_marginTop="30dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:orientation="vertical"
+                <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <EditText
-                        android:background="@drawable/text"
-                        android:padding="5dp"
-                        android:layout_margin="5dp"
-                        android:hint="ID"
+
+                    <LinearLayout
+                        android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/edt_login_id" />
+                        android:layout_marginTop="40dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:layout_height="wrap_content">
 
-                    <EditText
-                        android:background="@drawable/text"
-                        android:padding="5dp"
-                        android:layout_margin="5dp"
-                        android:hint="PW"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:ems="10"
-                        android:id="@+id/edt_login_pw" />
+                        <ImageView
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:src="@drawable/logo"/>
 
 
-                    <CheckBox
-                        android:checked="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="자동로그인"
-                        android:textColor="#b3ffff"
-                        android:id="@+id/checkBox" />
+                        <TextView
+                            android:textColor="#dfdfdf"
+                            android:textSize="17dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Endless Possibilities with One Tilt"
+                            android:layout_gravity="center_horizontal" />
 
-                    <com.facebook.login.widget.LoginButton
-                        android:layout_width="match_parent"
-                        android:id="@+id/btn_login_proc_fb"
-                        android:layout_height="70dp" />
+                        <LinearLayout
+                            android:layout_marginTop="30dp"
+                            android:layout_marginLeft="30dp"
+                            android:layout_marginRight="30dp"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <EditText
+                                android:background="@drawable/text"
+                                android:padding="5dp"
+                                android:layout_margin="5dp"
+                                android:hint="ID"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/edt_login_id" />
 
-                    <Button
-                        android:layout_marginTop="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:text="Log In"
-                        android:textColor="#ababab"
-                        android:background="#000000"
-                        android:layout_gravity="center_horizontal"
-                        android:id="@+id/btn_login_proc" />
+                            <EditText
+                                android:background="@drawable/text"
+                                android:padding="5dp"
+                                android:layout_margin="5dp"
+                                android:hint="PW"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="textPassword"
+                                android:ems="10"
+                                android:id="@+id/edt_login_pw" />
 
-                    <TextView
-                        android:layout_marginTop="30dp"
-                        android:layout_marginBottom="50dp"
-                        android:layout_gravity="center_horizontal"
-                        android:textColor="#b3ffff"
-                        android:textSize="17dp"
-                        android:id="@+id/tv_login_signup"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="회원가입"/>
-                </LinearLayout>
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:orientation="horizontal"
+                                >
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:gravity="center"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content">
+
+                                    <CheckBox
+                                        android:checked="true"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="자동로그인"
+                                        android:textColor="#b3ffff"
+                                        android:id="@+id/checkBox" />
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:gravity="center"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content">
+
+                                    <TextView
+                                        android:layout_gravity="center"
+                                        android:textColor="#b3ffff"
+                                        android:textSize="17dp"
+                                        android:id="@+id/tv_login_signup"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="회원가입"/>
+                                </LinearLayout>
+
+
+                            </LinearLayout>
+
+                            <Button
+                                android:layout_marginTop="10dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="50dp"
+                                android:text="Log In"
+                                android:textColor="#ababab"
+                                android:background="#000000"
+                                android:layout_gravity="center_horizontal"
+                                android:id="@+id/btn_login_proc" />
+
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+                </ScrollView>
 
             </LinearLayout>
-            <LinearLayout
-                android:id="@+id/btn_login_nologin"
-                android:layout_gravity="bottom"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="#2f2f2f">
-
-                <TextView
-                    android:textColor="#ababab"
-                    android:gravity="center"
-                    android:textSize="17dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="&lt;&lt;&lt;로그인없이 사용하기&gt;&gt;&gt;"/>
-            </LinearLayout>
-        </FrameLayout>
+        </LinearLayout>
 
 
     </LinearLayout>
