--- a/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
+++ b/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
@@ -30,7 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
+                   <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="350dp"
                         android:id="@+id/img_coupon_detail"
@@ -105,6 +105,14 @@
                     android:textSize="20dp"
                     android:text=""
                     android:id="@+id/tv_coupon_detail_file" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="350dp"
+                    android:id="@+id/img_coupon_image"
+                    android:scaleType="centerCrop"
+                    android:layout_gravity="center_horizontal" />
+
                 <Button
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
