--- a/TiltCodeManager/app/src/main/res/layout/activity_tiltselect.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_tiltselect.xml
@@ -8,15 +8,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <LinearLayout
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="60dp"
                 android:orientation="vertical"
+                android:layout_gravity="top"
+                android:layout_width="match_parent"
+                android:background="#2f2f2f"
+                android:gravity="center"
+                android:layout_height="60dp">
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:id="@+id/sv_tiltselect"
+                    android:layout_height="match_parent" >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:id="@+id/sv_tiltselect_thumbnail"
+                        android:orientation="horizontal"
+                        android:layout_height="match_parent">
+
+                    </LinearLayout>
+
+                </HorizontalScrollView>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <android.support.v4.view.ViewPager
@@ -43,23 +64,7 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_gravity="top"
-                android:layout_width="match_parent"
-                android:background="#2f2f2f"
-                android:gravity="center"
-                android:layout_height="60dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tilt 각도를 선택해주세요."
-                    android:layout_gravity="center"
-                    android:textColor="#efefef"
-                    android:textSize="20dp"/>
-            </LinearLayout>
-        </FrameLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
