--- a/tiltcode/app/src/main/res/drawable/btnselector.xml
+++ b/tiltcode/app/src/main/res/drawable/btnselector.xml
@@ -2,7 +2,7 @@
 <selector  xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_pressed="true"
-        android:drawable="@drawable/login_press" />
+        android:drawable="@drawable/login_pressed" />
     <item
         android:state_pressed="false"
         android:drawable="@drawable/login_nomal" />
