tilt select pager fixed

--- a/TiltCodeManager/app/src/main/res/layout/activity_tiltselect.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_tiltselect.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tilt="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="vertical"
+        android:background="@drawable/bg_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -13,6 +15,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_gravity="bottom"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:background="#2f2f2f"
+                android:layout_height="40dp">
+
+                <com.tiltcode.tiltcodemanager.View.TypedTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="틸트 각도를 설정해주세요"
+                    android:textColor="#efefef"
+                    android:textSize="22dp"
+                    tilt:fonttype="yoon330"
+                    android:id="@+id/tv_setting_row" />
+            </LinearLayout>
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_gravity="top"
@@ -39,15 +59,38 @@
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/pager_tiltselect"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_above="@+id/bottom"
-                    android:layout_below="@+id/ll_title_layout"
-                    >
-                </android.support.v4.view.ViewPager>
+                android:layout_height="0dp">
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="80dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/angle"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0'"
+                            android:id="@+id/tv_tiltselect_angle" />
+                    </LinearLayout>
+
+                    <android.support.v4.view.ViewPager
+                        android:layout_marginTop="80dp"
+                        android:layout_marginBottom="20dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:id="@+id/pager_tiltselect"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent">
+                    </android.support.v4.view.ViewPager>
+                </FrameLayout>
             </LinearLayout>
             <LinearLayout
                 android:orientation="vertical"
